[tool.poetry]
name = "weather-tracking"
version = "0.1.0"
description = ""
authors = ["bluegroneman"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.35"
pandas = "^2.2.3"
pytest = "^8.3.3"
typer = "^0.12.5"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
requests = "^2.32.3"
retry-requests = "^2.0.0"
notebook = "^7.4.5"
seaborn = "==0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
